--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,9 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest --optimize-autoloader --classmap-authoritative
         shell: bash
 
-      - name: Validate composer.json and composer.lock.
-        run: composer validate
-        shell: bash
+      # - name: Validate composer.json and composer.lock.
+      #   run: composer validate
+      #   shell: bash
 
       - name: Install composer dependencies.
         run: composer install --prefer-dist --no-progress --no-suggest --optimize-autoloader --classmap-authoritative
