--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.1"
+  },
+  "scripts": {
+    "test": "phpunit --testdox --no-coverage",
+    "test-coverage": "XDEBUG_MODE=coverage phpunit --coverage-html coverage"
   }
 }
