--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "phpunit/phpunit": "^11.1"
   },
   "scripts": {
-    "test": "phpunit --testdox --no-coverage",
+    "test": "phpunit --no-coverage --testdox",
     "test-coverage": "XDEBUG_MODE=coverage phpunit --coverage-html coverage"
   }
 }
