--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,12 +3,15 @@
 {
 	"name": "PHP",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/php:1-8.3-bullseye",
+	"image": "mcr.microsoft.com/devcontainers/php:1-8.2-bullseye",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
+			"settings": {
+				"intelephense.environment.phpVersion": "8.2"
+			},
 			"extensions": [
 				"ritwickdey.liveserver"
 			]
