--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,18 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^11.1"
+    "phpunit/phpunit": "^11.1",
+    "helsingborg-stad/phpcs": "^0.3.5"
   },
   "scripts": {
     "test": "phpunit --no-coverage --testdox",
-    "test-coverage": "XDEBUG_MODE=coverage phpunit --coverage-html coverage"
+    "test-coverage": "XDEBUG_MODE=coverage phpunit --coverage-html coverage",
+    "lint": "phpcs",
+    "lint-fix": "phpbf"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
