--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           tools: composer:v2
 
       - name: Install composer dependencies.
-        run: composer install --prefer-dist --no-progress --no-suggest --optimize-autoloader --classmap-authoritative
+        run: composer install --no-dev --prefer-dist --no-progress --no-suggest --optimize-autoloader --classmap-authoritative
         shell: bash
         
       - name: Rsync deployment to remote
