--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.1",
-    "helsingborg-stad/phpcs": "^0.3.5"
+    "helsingborg-stad/phpcs": "^0.3.5",
+    "spatie/phpunit-snapshot-assertions": "^5.1"
   },
   "scripts": {
     "test": "phpunit --no-coverage --testdox",
