--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,40 +1,21 @@
-name: Release and deploy.
+name: Release
 
 on:
-  release:
-    types:
-      - released
-    branches:
-      - main
+  push:
+    branches: [main]
 
 jobs:
-  deploy:
+  release:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
 
-      - name: Setup PHP with composer v2.
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ vars.PHP_VERSION }}
-          tools: composer:v2
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
-      - name: Install composer dependencies.
-        run: composer install --no-dev --prefer-dist --no-progress --no-suggest --optimize-autoloader --classmap-authoritative
-        shell: bash
-        
-      - name: Rsync deployment to remote
-        uses: burnett01/rsync-deployments@7.0.1
-        with:
-          switches: -avzrog --delete
-          path: .
-          remote_path: ${{ vars.DEPLOY_HOST_PATH }}
-          remote_host: ${{ vars.DEPLOY_HOST }}
-          remote_user: ${{ vars.DEPLOY_HOST_USER }}
-          remote_key: ${{ secrets.DEPLOY_HOST_USER_KEY }}
-          remote_port: ${{ vars.DEPLOY_PORT }}
-
-
-
-      
+    - name: Create Release and bump version files
+      uses: helsingborg-stad/release-wp-plugin-action@1.0.3
+      with:
+        php-version: 8.3
