--- a/src/Transforms/__snapshots__/WPReleaseEventTransformTest__testMatchesSnapshot__1.json
+++ b/src/Transforms/__snapshots__/WPReleaseEventTransformTest__testMatchesSnapshot__1.json
@@ -1,6 +1,9 @@
 [
     {
-        "@context": "https://schema.org",
+        "@context": {
+            "schema": "https://schema.org",
+            "municipio": "https://schema.municipio.tech/schema.jsonld"
+        },
         "@type": "Event",
         "name": "Test Event",
         "description": "Cras blandit lacus nec lorem ullamcorper, eu elementum lectus ullamcorper. Maecenas commodo, eros eget sollicitudin sagittis, nisi magna aliquet nisi, in tincidunt elit ante at nibh. Aliquam quam arcu, suscipit eget diam sit amet, viverra hendrerit est. Proin ultricies, orci nec vestibulum viverra, massa nunc faucibus odio, in interdum urna felis non orci. Aenean et dolor malesuada, mattis tellus et, fringilla urna. In hac habitasse platea dictumst.",
@@ -86,7 +89,10 @@
         "@id": "idprefix5-0"
     },
     {
-        "@context": "https://schema.org",
+        "@context": {
+            "schema": "https://schema.org",
+            "municipio": "https://schema.municipio.tech/schema.jsonld"
+        },
         "@type": "Event",
         "name": "Test Event",
         "description": "Cras blandit lacus nec lorem ullamcorper, eu elementum lectus ullamcorper. Maecenas commodo, eros eget sollicitudin sagittis, nisi magna aliquet nisi, in tincidunt elit ante at nibh. Aliquam quam arcu, suscipit eget diam sit amet, viverra hendrerit est. Proin ultricies, orci nec vestibulum viverra, massa nunc faucibus odio, in interdum urna felis non orci. Aenean et dolor malesuada, mattis tellus et, fringilla urna. In hac habitasse platea dictumst.",
